<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/app"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">

                <!--
            In the above cardview widget
            cardelevation property will give elevation to your card view
            card corner radius will provide radius to your card view
            card background color will give background color to your card view
            card max elevation will give the cardview maximum elevation
            card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
            card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
            below are the two widgets imageview and text view we are displaying inside our card view.
            -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <TextView
                        android:id="@+id/about_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@color/appBar_bg"
                        android:padding="10sp"
                        android:text="About App"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/ddc_logo"
                        android:layout_width="109dp"
                        android:layout_height="109dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="32dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ddc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.025"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/about_app"
                        app:layout_constraintVertical_bias="0.366" />

                    <TextView
                        android:id="@+id/about_app_info"
                        android:layout_width="220dp"
                        android:layout_height="39dp"
                        android:layout_gravity="bottom|center_horizontal"

                        android:text="@string/about_app"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/app_party"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.848"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/about_app"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/app_party"
                        android:layout_width="220dp"
                        android:layout_height="19dp"
                        android:layout_marginBottom="8dp"

                        android:text="@string/copyright"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/app_web1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.848"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/app_web1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"

                        android:text="@string/website1"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/app_web2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.524"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/app_web2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"

                        android:text="@string/website2"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.528"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bus_partner"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@+id/app"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="17dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <TextView
                        android:id="@+id/bus_part"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@color/appBar_bg"
                        android:padding="10sp"
                        android:text="@string/partner_name"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                    <TextView
                        android:layout_width="226dp"
                        android:layout_height="23dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="8dp"

                        android:text="@string/partner_info"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/college_cst"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.861"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bus_part"
                        app:layout_constraintVertical_bias="0.967" />

                    <TextView
                        android:id="@+id/college_cst"
                        android:layout_width="226dp"
                        android:layout_height="23dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="84dp"

                        android:text="@string/partner_college"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.861"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bus_part"
                        app:layout_constraintVertical_bias="0.984" />

                    <TextView
                        android:id="@+id/part_web1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="60dp"

                        android:text="@string/part_web1"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.455"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/part_web2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"

                        android:text="@string/part_web2"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.479"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="109dp"
                        android:layout_height="109dp"
                        android:layout_marginBottom="32dp"
                        android:src="@drawable/cst"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.057"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bus_part"
                        app:layout_constraintVertical_bias="1.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@+id/app"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <!--
            In the above cardview widget
            cardelevation property will give elevation to your card view
            card corner radius will provide radius to your card view
            card background color will give background color to your card view
            card max elevation will give the cardview maximum elevation
            card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
            card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
            below are the two widgets imageview and text view we are displaying inside our card view.
            -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@color/appBar_bg"
                        android:padding="10sp"
                        android:text="@string/developer"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/dev_logo"
                        android:layout_width="109dp"
                        android:layout_height="109dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/dev"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.025"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintVertical_bias="0.564" />

                    <TextView
                        android:id="@+id/dev_info"
                        android:layout_width="223dp"
                        android:layout_height="117dp"

                        android:lineHeight="20dp"
                        android:text="@string/developer_info"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.827"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>